# veyra

./: .gitignore  AGENTS.md  README.md  index.html  index.html.legacy.bak  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/design/: veyra-production-mockups.html
docs/mockups/: 01-terminal-noir.html  02-editorial-swiss.html  03-sunset-brutalism.html  04-apple-glass.html  05-glacier-home.html  06-glacier-pro.html  07-glacier-light.html  08-glacier-veyra.html  overlay-01-capsule.html  overlay-02-stage-card.html  (+1 more)
src/: app.tsx  main.tsx  overlay-main.tsx  overlay.html  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: cap_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  draft_email.rs  lib.rs  main.rs  recorder.rs  recording_state.rs  settings.rs  telemetry.rs  transcribe_groq.rs  transcribe_local.rs
src-tauri/src/audio/: mod.rs  recorder.rs  vad.rs
src-tauri/src/format/: commands.rs  dictionary.rs  fillers.rs  mod.rs  snippets.rs
src-tauri/src/pipeline/: capture.rs  commit.rs  format.rs  inject.rs  mod.rs  tmp.rs  transcribe.rs
src-tauri/src/settings/: adapter.rs  keyring.rs  legacy_v1.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/storage/: app_meta.rs  auto_add_candidates.rs  dictionary.rs  migrations.rs  mod.rs  scratchpad.rs  snippets.rs  stats.rs  test_util.rs  transcriptions.rs
src-tauri/src/storage/migrations/: 001_initial.sql  002_auto_add_candidates.sql
src-tauri/tests/: migration_e2e.rs  storage_integration.rs
src-tauri/windows/: hooks.nsh
(+93 files in other folders)
